- renamed validation flags enums - fixed invalid-section alignment - renamed BC Reg Contacts component - prepared for forthcoming folio number implementation - changed folio number layout to rows/cols - changed "officeAddressesChanged" to apply to corrections only - added folio number validity flags - no app version update as this doesn't implement anything

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -165,6 +165,7 @@ p {
 // Error Border
 .invalid-section {
   border-left: 3px solid $app-red;
+  margin-left: -3px;
 }
 
 // Loading Indicator
